--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,6 +3,8 @@
   justify-content: center;
   padding: 5px 3px;
   position: fixed;
+  top: 0;
+  box-sizing: border-box;
   width: 100%;
 }
 .status-bar__column {
