Update ffriends, chat, find

--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,7 +1,8 @@
 .screen-header {
   display: flex;
   justify-content: space-between;
-  padding: 25px;
+  padding: var(--horizontal-space);
+  margin-bottom: 15px;
   align-items: center;
 }
 
@@ -9,7 +10,22 @@
   font-size: 32px;
   font-weight: 600;
 }
+.screen-header__icons {
+  position: relative;
+}
 
 .screen-header__icons span {
   margin-left: 25px;
+}
+
+.screen-header__cog-news {
+  background-color: tomato;
+  border-radius: 50%;
+  width: 6px;
+  height: 6px;
+  display: flex;
+
+  position: absolute;
+  top: -8px;
+  right: -8px;
 }
