--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,21 +19,12 @@
 }
 
 .nav__notification {
-  background-color: tomato;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 600;
-  color: white;
   position: absolute;
   left: 15px;
   bottom: 15px;
 }
 
-.nav__ellipsis_news {
+.nav__ellipsis-news {
   background-color: tomato;
   border-radius: 50%;
   width: 6px;
