--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,6 @@
 :root {
   --yellow: #fae100;
   --horizontal-space: 25px;
+  --alt-screen-horizontal-space: 10px;
   --main-border: 1px solid rgba(0, 0, 0, 0.3);
 }
