--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -89,3 +89,70 @@
 .message-row--own .message__time {
   order: -1;
 }
+
+.reply {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 10px;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.reply .reply__column:first-child {
+  width: 8%;
+}
+.reply .reply__column:last-child {
+  position: relative;
+  width: 92%;
+}
+
+.reply .reply__column:first-child i {
+  margin-left: 2px;
+  font-size: 25px;
+}
+
+.reply input {
+  padding: 10px;
+  /* height: 30px; */
+  width: 100%;
+  box-sizing: border-box;
+  border: var(--main-border);
+  border-radius: 20px;
+}
+
+.reply__column:last-child > i,
+.reply__column:last-child button {
+  position: absolute;
+  right: 3px;
+  top: 3px;
+}
+
+.reply__column:last-child > i {
+  right: 42px;
+  top: 9px;
+  font-size: 24px;
+}
+
+.reply__column button {
+  background-color: var(--yellow);
+  border: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.reply i {
+  opacity: 0.5;
+}
+.reply__column button i {
+  opacity: 1;
+}
+
+.reply__column button:focus,
+.reply__column button:active {
+  outline: none;
+}
