--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -29,3 +29,16 @@
   top: -8px;
   right: -8px;
 }
+
+@keyframes rotateCog {
+  0% {
+    transform: none;
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1.5s linear infinite;
+}
