--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -103,6 +103,26 @@
   font-size: 12px;
 }
 
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
 .open-post__heart-count span {
   margin-left: 3px;
+}
+
+.open-post__photo:hover i {
+  will-change: transform;
+  animation: heartBeat 2s ease-in-out infinite;
 }
